# ATFP

./: .clang-format  CMakeLists.txt  DevelopmentData_modded.csv  Fuzzy_Logic_Final.ipynb  LICENSE  README.md  main.py  main_cv.py  process_data.ipynb  process_data_new.ipynb
Admin/: Admin.sln
Admin/Admin/: Admin.csproj  Program.cs
Admin/Admin/Controllers/: WeatherForecastController.cs
Admin/Admin/Properties/: launchSettings.json
Admin/BuisnessLayer/: BuisnessLayer.csproj
Admin/DataLayer/: DataLayer.csproj
Admin/DataLayer/Models/Base/: ISoftDeletable.cs
assets/data/: DevelopmentData.csv
assets/shaders/: color.fs  texture.vs
include/: Actuator.h  Data.h  Object.h
include/Display/: Camera.h  Display.h  Mesh.h  Shader.h  Texture.h
opengl-setup-master/: CMakeLists.txt
opengl-setup-master/assets/shaders/: texture.fs
opengl-setup-master/include/Display/: Display.h  Projection.h
opengl-setup-master/src/: main.cpp
opengl-setup-master/tests/: CMakeLists.txt  testing_demo.cpp
src/: main.cpp
